new entry, pinned feature, tags transparent

--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
         <div class="blog-container">
             <h1 align="center" class="blog-header">Saaim's Entries</h1>
             <div class="blog-post">
+                <a href="blog-content/welcome.html" class="no-uline">
+                <h2 class="blog-title">introduction to me!</h2>
+                <p class="blog-date"><i>Published: October 1, 2024</i></p>
+                <span class="pinned-tag">Pinned</span>
+                </a>
+            </div>
+            <div class="blog-post">
                 <a href="blog-content/cmputiskil.html" class="no-uline">
-                <h2 class="blog-title">CMPUT 201 midterm tomorrow... am I ready?</h2>
+                <h2 class="blog-title">midterm tomorrow... am I ready?</h2>
                 <p class="blog-date"><i>Published: October 8, 2024</i></p>
                 <span class="edu-tag">Education</span>
                 <span class="philosophical-tag">Philosophical</span>
