--- a/blog-content/cmputiskil.html
+++ b/blog-content/cmputiskil.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <a href="javascript:history.back()" class="go-back-button">Go Back</a>
-    <h1 align="center" class="blog-header">CMPUT 201 midterm tomorrow... <br>am I ready?
-        <p class="blog-date"><i>Published: October 8, 2024</i></p>
+    <h1 align="center" class="blog-header">midterm tomorrow... <br>am I ready?
+        <p class="blog-date"><i>Published: October 8, 2024<br>Edited: November 20, 2024</i></p>
     </h1>
     <div class="paragraphs">
         <p>
@@ -19,6 +19,8 @@
             <br><br>Its upto who you ask, but personally I believe if its handeled correctly, the outcome can be marvelous. sometimes the stakes of the assignment arent high enough, and procrastination acts like a challenge. Imagine this, your a secret agent and you need to steal the diamond on the other side of the room. While you're running, the door is slowly closing and you have to make it in through the gap, pretty exhilarating right?
             <br><br>
             In conclusion, am I ready? well yes but no. No matter how hard you try, you're never going to be ready for anything, anywhere anytime. But what we can do, is be prepared and hope for the best. Thankyou for reading my first journal entry, hope to write more!
+            <br><br>
+            edit: I got cooked,  the average was a 30% and i got a 22%... but in the next one I scored higher than the average... the average wasnt very high...
             <br><br>
             <strong>Signing Off<br></strong>Saaim Japanwala
         </p>
